--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>La cita es<q>Newman 2018</q></p>
     <code>main() { printf ("Hola, mundo"); }</code>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, rem velit. Est inventore voluptatum molestias eius mollitia dolores optio aperiam?</p>
-
+    <h1>************************ESTO ES UN TITULO DE PRUEBA***************************</h1>
 
     <div>
         <h1>Lista de caracteres</h1>
