--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <code>main() { printf ("Hola, mundo"); }</code>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, rem velit. Est inventore voluptatum molestias eius mollitia dolores optio aperiam?</p>
     <h1>************************ESTO ES UN TITULO DE PRUEBA***************************</h1>
+    <h2>NUEVA PRUEBA</h2>
 
     <div>
         <h1>Lista de caracteres</h1>
